// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColumnSizeStyles Get a correct column size styles 1`] = `
{
  "general": {
    "flex-basis": "calc(1% - 0px)",
    "width": "calc(1% - 0px)",
  },
  "l": {
    "flex-basis": "calc(4% - 0px)",
    "width": "calc(4% - 0px)",
  },
  "m": {
    "flex-basis": "calc(1% - 0px)",
    "width": "calc(1% - 0px)",
  },
  "s": {
    "flex-basis": "calc(2% - 0px)",
    "width": "calc(2% - 0px)",
  },
  "xl": {
    "flex-basis": "calc(3% - 0px)",
    "width": "calc(3% - 0px)",
  },
  "xs": {
    "flex-basis": "calc(3% - 0px)",
    "width": "calc(3% - 0px)",
  },
  "xxl": {
    "flex-basis": "calc(2% - 0px)",
    "width": "calc(2% - 0px)",
  },
}
`;

exports[`getColumnSizeStyles Get a correct column size styles with gap options 1`] = `
{
  "general": {
    "flex-basis": "calc(1% - 1.6667%)",
    "width": "calc(1% - 1.6667%)",
  },
  "l": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "m": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "s": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xl": {
    "flex-basis": "calc(3% - 1.6667%)",
    "width": "calc(3% - 1.6667%)",
  },
  "xs": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xxl": {
    "flex-basis": "calc(2% - 1.6667px)",
    "width": "calc(2% - 1.6667px)",
  },
}
`;

exports[`getColumnSizeStyles Get a correct column size styles with some fit-content 1`] = `
{
  "general": {
    "flex-basis": "calc(1% - 0px)",
    "width": "calc(1% - 0px)",
  },
  "l": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "m": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "s": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xl": {
    "flex-basis": "calc(3% - 0px)",
    "width": "calc(3% - 0px)",
  },
  "xs": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xxl": {
    "flex-basis": "calc(2% - 0px)",
    "width": "calc(2% - 0px)",
  },
}
`;

exports[`getColumnSizeStyles Get a correct column size styles with some fullwidth columns 1`] = `
{
  "general": {
    "flex-basis": "100%",
    "width": "100%",
  },
  "l": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "m": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "s": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xl": {
    "flex-basis": "calc(3% - 0px)",
    "width": "calc(3% - 0px)",
  },
  "xs": {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xxl": {
    "flex-basis": "calc(2% - 0px)",
    "width": "calc(2% - 0px)",
  },
}
`;
